@@ -23,7 +23,7 @@ module SimpleNavigation
     attr_reader :item
 
     def initialize(item)
-      @item = item
+      @item = item.instance_of?(Hash) ? to_object(item) : item
     end
 
     # Returns the options for this item. If the wrapped item does not implement an options method, an empty hash is returned.
@@ -39,6 +39,19 @@ module SimpleNavigation
     # Converts this Item into a SimpleNavigation::Item
     def to_simple_navigation_item(item_container)
       SimpleNavigation::Item.new(item_container, key, name, url, options, items)
+    end
+
+    protected
+    
+    def to_object(hash)
+      mod = Module.new do
+        hash.each_pair do |key, value|
+          define_method key do
+            value
+          end
+        end
+      end
+      Object.new.extend(mod)
     end
 
   end
